<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".loginSignup.VerifyOtpActivity"
    android:background="@color/yellow">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:orientation="vertical"
        >

       <ImageView
           android:id="@+id/img_close"
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:src="@drawable/ic_baseline_close_24"
           android:padding="5dp"
           android:transitionName="transition_back_arrow_btn"
           app:tint="@color/black" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/otp_code_text"
            android:textSize="100sp"
            android:layout_gravity="center"
            android:textColor="@color/black"
            android:fontFamily="sans-serif-black"
            android:textAlignment="center"
            android:includeFontPadding="false"
            android:transitionName="transition_title_text"
            android:textAllCaps="true"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/otp_verification"
            android:textSize="24sp"
            android:layout_gravity="center"
            android:textColor="@color/black"
            android:fontFamily="sans-serif-black"
            android:textAlignment="center"
            android:includeFontPadding="false"
            android:textAllCaps="true"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/otp_description"
            android:textSize="16sp"
            android:layout_marginTop="50dp"
            android:layout_gravity="center"
            android:textColor="@color/black"
            android:fontFamily="sans-serif"
            android:textAlignment="center"
            android:includeFontPadding="false"
            />

        <com.chaos.view.PinView
            android:id="@+id/OTPpinView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:itemCount="6"
            app:itemWidth="50dp"
            app:itemHeight="50dp"
            android:layout_gravity="center"
            android:layout_marginTop="30dp"
            app:lineColor="@color/black"
            android:itemBackground="@color/lightwhite"
            style="@style/PinWidget.PinView"
            android:inputType="number"
            android:cursorVisible="true"
            app:cursorColor="@color/black"
            app:hideLineWhenFilled="true"
            app:itemRadius="15dp"
            />
<Button
    android:id="@+id/btn_verify"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/black"
    android:layout_gravity="center"
    android:layout_margin="30dp"
    android:layout_marginTop="15dp"
    android:textColor="@color/white"
    android:transitionName="transition_next_btn"
    android:text="Verify Code"/>

        <ProgressBar
            android:id="@+id/progress_bar"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_gravity="center"
            android:visibility="gone"
            />

    </LinearLayout>

</ScrollView>