<?xml version="1.0" encoding="utf-8"?>
    <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="300dp"
                android:background="#fece2f"
                android:padding="20dp">

                <ImageView
                    android:id="@+id/img_profile_image"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:layout_centerVertical="true"

                    android:src="@drawable/ic_baseline_person_24" />

                <TextView
                    android:id="@+id/txt_user_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="10dp"
                    android:layout_toRightOf="@id/img_profile_image"
                    android:fontFamily="sans-serif-black"
                    android:text="Nisarg"
                    android:textSize="20sp" />

                <TextView
                    android:id="@+id/txt_user_email"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/txt_user_name"
                    android:layout_marginLeft="10dp"
                    android:layout_toRightOf="@+id/img_profile_image"
                    android:fontFamily="sans-serif-black"
                    android:text="nisargshah@gmail.com"
                    android:textSize="14sp" />
            </RelativeLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="-100dp"
                android:padding="20dp">

                <androidx.cardview.widget.CardView
                    android:layout_width="0dp"
                    android:layout_height="125dp"
                    android:layout_margin="10dp"
                    android:layout_weight="1"
                    app:cardBackgroundColor="#FFB600"
                    app:cardCornerRadius="15dp"
                    android:elevation="50dp">

                    <RelativeLayout
                        android:id="@+id/layout_btn_bookings"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:padding="5dp">

                        <ImageView
                            android:layout_width="30dp"
                            android:layout_height="30dp"
                            android:layout_centerHorizontal="true"
                            android:src="@drawable/ic_baseline_bookmark_24" />

                        <TextView
                            android:id="@+id/label_booking"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_centerInParent="true"
                            android:fontFamily="sans-serif-black"
                            android:text="Bookings"
                            android:textSize="20sp" />

                        <TextView
                            android:id="@+id/label_booking_desc"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_below="@+id/label_booking"
                            android:layout_centerHorizontal="true"
                            android:fontFamily="sans-serif-black"
                            android:gravity="center"
                            android:text="View bookings"
                            android:textSize="16sp" />
                    </RelativeLayout>

                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:layout_width="0dp"
                    android:layout_height="125dp"
                    android:layout_margin="10dp"
                    android:layout_weight="1"
                    app:cardCornerRadius="15dp"
                    app:cardBackgroundColor="#FFB600">

                    <RelativeLayout
                        android:id="@+id/layout_btn_history"

                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:padding="5dp">

                        <ImageView
                            android:layout_width="30dp"
                            android:layout_height="30dp"
                            android:layout_centerHorizontal="true"
                            android:src="@drawable/ic_baseline_access_time_24" />

                        <TextView
                            android:id="@+id/label_history"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_centerInParent="true"
                            android:fontFamily="sans-serif-black"
                            android:text="History"
                            android:textSize="20sp" />

                        <TextView
                            android:id="@+id/label_booking_history"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_below="@+id/label_history"
                            android:layout_centerHorizontal="true"
                            android:fontFamily="sans-serif-black"
                            android:gravity="center"
                            android:text="View history"
                            android:textSize="16sp" />
                    </RelativeLayout>

                </androidx.cardview.widget.CardView>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="20dp">

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/TIL_fullname"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/enter_full_name"
                    android:textColorHint="@color/black"
                    app:boxStrokeColor="@color/black"
                    app:boxStrokeWidthFocused="2dp"
                    app:endIconMode="clear_text"
                    app:endIconTint="@color/black"
                    app:hintTextColor="@color/black"
                    app:startIconDrawable="@drawable/ic_baseline_edit_24"
                    app:startIconTint="@color/black">

                    <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:drawableLeft="@drawable/ic_baseline_person_24"
                        android:drawablePadding="10dp"
                        android:text="Nisarg Shah" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/TIL_email"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/enter_email"
                    android:textColorHint="@color/black"
                    app:boxStrokeColor="@color/black"
                    app:boxStrokeWidthFocused="2dp"
                    app:endIconMode="clear_text"
                    app:endIconTint="@color/black"
                    app:hintTextColor="@color/black"
                    app:startIconDrawable="@drawable/ic_baseline_email_24"
                    app:startIconTint="@color/black">

                    <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:drawableLeft="@drawable/ic_baseline_email_24"
                        android:drawablePadding="10dp"
                        android:text="NisargShah@gmail.com" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/TIL_phone"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="Phone"
                    android:textColorHint="@color/black"
                    app:boxStrokeColor="@color/black"
                    app:boxStrokeWidthFocused="2dp"
                    app:endIconMode="clear_text"
                    app:endIconTint="@color/black"
                    app:hintTextColor="@color/black"
                    app:startIconDrawable="@drawable/ic_baseline_phone_24"
                    app:startIconTint="@color/black"
                    android:layout_marginBottom="10dp"
                    >

                    <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:drawableLeft="@drawable/ic_baseline_phone_24"
                        android:drawablePadding="10dp"
                        android:inputType="phone"
                        android:text="123123123" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/TIL_password"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/enter_password"
                    android:textColorHint="@color/black"
                    app:boxStrokeColor="@color/black"
                    app:boxStrokeWidthFocused="2dp"
                    app:endIconMode="password_toggle"
                    app:endIconTint="@color/black"
                    app:hintTextColor="@color/black"
                    app:startIconDrawable="@drawable/ic_baseline_lock_24"
                    app:startIconTint="@color/black"
                    android:layout_marginBottom="10dp">

                    <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:drawableLeft="@drawable/ic_baseline_security_24"
                        android:drawablePadding="10dp"
                        android:inputType="textPassword"
                        android:text="Nisarg Shah" />
                </com.google.android.material.textfield.TextInputLayout>

                <Button
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/button_bg_profile"
                    android:text="Update" />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>